# bookstore

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
bookstore/: settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py  0002_alter_order_user.py  0003_alter_order_user.py  0004_remove_order_user.py  0005_order_user.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/models/: test_post_order.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py  0002_alter_product_title.py  0003_alter_product_title.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/models/: test_post.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
