[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Kelly Yuzawa <keandna@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.1"
django-debug-toolbar = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
